Frontend - GUI actualizada (testing for more)

--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
     "events": "^3.3.0",
-    "firebase": "^12.5.0",
+    "firebase": "^12.6.0",
+    "lucide-react": "^0.555.0",
+    "process": "^0.11.10",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.5",
     "simple-peer": "^9.11.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.16",
-    "process": "^0.11.10",
     "util": "^0.12.5",
+    "webrtc-adapter": "^9.0.3",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
